security-group.tf
resource "aws_security_group" "access-ssh" {
    name = "access-ssh"
    description = "access-ssh"

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = var.cdirs_remote_access
    }

    tags = {
        Name = "ssh"
    }
}

resource "aws_security_group" "access-ssh-us-east-1" {
    provider    = aws.us-east-1
    name        = "access-ssh"
    description = "access-ssh"

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["[development-ip]/32"]
    }

    tags = {
        Name = "ssh"
    }
}
